# my-code-base

./: .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  authors.html  bibliography.html  changelog.html  content.html  environment.yaml  environment.yml  examples.html  faq.html  genindex.html  home.html  installation.html  intro.html  jupytext.toml  license.html  make.bat  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: dependabot-reviewer.yml  docs.yml  main.yml
_autoapi/: index.html
_autoapi/my_code_base/: index.html
_autoapi/my_code_base/cli/: index.html
_autoapi/my_code_base/core/: index.html
_autoapi/my_code_base/core/units/: index.html
_autoapi/my_code_base/core/utils/: index.html
_autoapi/my_code_base/core/xarray/: index.html
_autoapi/my_code_base/esd/: index.html
_autoapi/my_code_base/esd/coordinates/: index.html
_autoapi/my_code_base/esd/utils/: index.html
_autoapi/my_code_base/filehandling/: index.html
_autoapi/my_code_base/filehandling/utils/: index.html
_autoapi/my_code_base/my_code_base/: index.html
_autoapi/my_code_base/ocean/: index.html
_autoapi/my_code_base/ocean/bgc/: index.html
_autoapi/my_code_base/ocean/utils/: index.html
_autoapi/my_code_base/plot/: index.html
_autoapi/my_code_base/plot/colormoves/: index.html
_autoapi/my_code_base/plot/maps/: index.html
_autoapi/my_code_base/plot/utils/: index.html
_autoapi/my_code_base/plot/z_overlap/: index.html
_autoapi/my_code_base/stats/: index.html
_autoapi/my_code_base/stats/timeseries/: index.html
_modules/: index.html
_modules/my_code_base/: cli.html  my_code_base.html
_modules/my_code_base/core/: units.html  utils.html  xarray.html
_modules/my_code_base/esd/: coordinates.html  utils.html
_modules/my_code_base/filehandling/: utils.html
_modules/my_code_base/ocean/: bgc.html  utils.html
_modules/my_code_base/plot/: colormoves.html  maps.html  utils.html  z_overlap.html
_modules/my_code_base/stats/: timeseries.html
_sources/: bibliography.md  examples.md  home.md  markdown-notebooks.ipynb  usage.md
_sources/_autoapi/: index.rst
_sources/_autoapi/my_code_base/: index.rst
_sources/_autoapi/my_code_base/cli/: index.rst
_sources/_autoapi/my_code_base/core/: index.rst
_sources/_autoapi/my_code_base/core/units/: index.rst
_sources/_autoapi/my_code_base/core/utils/: index.rst
_sources/_autoapi/my_code_base/core/xarray/: index.rst
_sources/_autoapi/my_code_base/esd/: index.rst
_sources/_autoapi/my_code_base/esd/coordinates/: index.rst
_sources/_autoapi/my_code_base/esd/utils/: index.rst
_sources/_autoapi/my_code_base/filehandling/: index.rst
_sources/_autoapi/my_code_base/filehandling/utils/: index.rst
_sources/_autoapi/my_code_base/my_code_base/: index.rst
_sources/_autoapi/my_code_base/ocean/: index.rst
_sources/_autoapi/my_code_base/ocean/bgc/: index.rst
_sources/_autoapi/my_code_base/ocean/utils/: index.rst
_sources/_autoapi/my_code_base/plot/: index.rst
_sources/_autoapi/my_code_base/plot/colormoves/: index.rst
_sources/_autoapi/my_code_base/plot/maps/: index.rst
_sources/_autoapi/my_code_base/plot/utils/: index.rst
_sources/_autoapi/my_code_base/plot/z_overlap/: index.rst
_sources/_autoapi/my_code_base/stats/: index.rst
_sources/_autoapi/my_code_base/stats/timeseries/: index.rst
_sources/examples/: stereographic_maps.ipynb  z_overlap.ipynb
_static/: custom.css
docs/: Makefile  _config.yml  _toc.yml  bibliography.md  conf.py  examples.md  index.md  requirements.txt
docs/_config/themes/: furo.py  sphinx_immaterial.py
docs/_static/: custom.css
docs/examples/: calculating-distances.ipynb  detect-sea-ice-edge.ipynb  sic_nasa.nc  sic_topaz4.nc  z_overlap.ipynb
docs/source/: index.rst
docs_mk/: mkdocs.yml
docs_mk/docs/: api.md  index.md
docs_mk/site/: 404.html  index.html
docs_mk/site/search/: search_index.json
docsrc/: _config.yml  _sphinx_config.py  _toc.yml  examples.md  faq.md  installation.md  license.md  references.bib
docsrc/examples/: stereographic_maps.ipynb
examples/: stereographic_maps.html  z_overlap.html
notebooks/examples/: stereographic_maps.ipynb  stereographic_maps.py  z_overlap.ipynb  z_overlap.py
source/: conf.py  installation.rst  usage.rst
source/_static/: custom.css
src/my_code_base/: __init__.py  cli.py  my_code_base.py
src/my_code_base/core/: __init__.py  pandas_utils.py  units.py  utils.py  xarray.py  xarray_utils.py
src/my_code_base/esd/: __init__.py  coordinates.py  ensemble.py  utils.py
src/my_code_base/filehandling/: utils.py
src/my_code_base/linalg/: __init__.py
src/my_code_base/ocean/: __init__.py  bgc.py  utils.py
src/my_code_base/plot/: __init__.py  colormoves.py  colors.py  maps.py  utils.py  z_overlap.py
src/my_code_base/stats/: __init__.py  core.py  timeseries.py  xarray_utils.py
tests/: __init__.py  conftest.py  test_esd_ensembly.py  test_linalg.py  test_my_code_base.py  test_plot_maps.py  test_timeseries.py  test_xarray_utils.py
