[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-code-base"
description = "This is a collection of routines that I've developed over time and that I use in my daily work."
authors = [
    {name = "Markus Ritschel", email = "git@markusritschel.de"}
    ]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "cartopy",
    "click",
    "flake8",
    "lxml",
    "matplotlib",
    "mpl-axes-aligner",
    "multipledispatch",
    "numpy",
    "pandas",
    "pooch",
    "pytest",
    "pytest-cov",
    "tqdm",
    "typing-extensions",
    "xarray",
    "xarrayutils",
]

[project.optional-dependencies]
docs = [
    "furo",
    "geopy",
    "jupyter-book",
    "jupytext",
    "myst-parser",
    "mystmd",
    "lxml_html_clean",
    "nbsphinx",
    "pydata-sphinx-theme",
    "rinohtype",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-defaultargs",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-immaterial",
    "sphinx-issues",
    "sphinx-material",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "sphinx-toolbox",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-napoleon2",
]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
]


[project.scripts]
my-code-base = "my_code_base.cli:main"


[tool.setuptools.dynamic]
version = {attr = "my_code_base.__version__"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src"
    ]
addopts = [
    # "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.flake8]
max-line-length = 80
max-complexity = 10


[tool.cruft]
skip = [".git/"]
